syntax = "proto3";

package blog.v1;

option go_package = "./";

import "google/protobuf/timestamp.proto";
import "blog/v1/user.proto";

enum PostStatus {
    POST_STATUS_UNSPECIFIED = 0;
    POST_STATUS_DRAFT = 1;
    POST_STATUS_PRIVATE = 2;
    POST_STATUS_UNLISTED = 3;
    POST_STATUS_PUBLIC = 4;
}

message Post {
    int64 id = 1;
    User author = 2;
    string title = 3;
    bytes content = 4;
    PostStatus status = 5;
    google.protobuf.Timestamp published_at = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message GetPostRequest {
    int64 post_id = 1;
}

message GetPostResponse {
    Post post = 1;
}

service PostService {
    rpc GetPost(GetPostRequest) returns (GetPostResponse) {}
}
